--- a/src/assets/styles/base/_base.scss
+++ b/src/assets/styles/base/_base.scss
@@ -2,6 +2,7 @@ html,
 body {
   height: 100%;
   overflow-x: hidden;
+  font-family: Söhne, ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Ubuntu, Cantarell, Noto Sans, sans-serif, Helvetica Neue, Arial, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji;
 }
 
 // Scroll bar size
@@ -17,21 +18,23 @@ body {
 }
 
 .dark *::-webkit-scrollbar-track {
-  background-color: var(--color-dark-2);
+  background-color: theme('colors.cs-dark.DEFAULT');
 }
 
 // Scroll bar indicator
 *::-webkit-scrollbar-thumb {
-  background-color: var(--color-light-1-opacity);
-  border-color: #ffffff;
+  background-color: theme('colors.cs-light.900');
+  border-color: theme('colors.cs-light.800');
   border-radius: 9999px;
   border-width: 1px;
+
 }
 
 .dark *::-webkit-scrollbar-thumb {
-  background-color: var(--color-dark-3);
+  background-color: theme('colors.cs-dark.700');
+  border-color: #ffffff;
 }
 
 *::-webkit-scrollbar-thumb:hover {
-  background-color: var(--color-light-2);
+  background-color: theme('colors.cs-light.900');
 }
