--- a/src/app/features/chat/pages/chat/chat.component.html
+++ b/src/app/features/chat/pages/chat/chat.component.html
@@ -23,7 +23,7 @@
       >New chat</a
     >
     <a
-      class="flex p-3 items-center gap-3 relative rounded-md cursor-pointer break-all pr-14 bg-gray-800 hover:bg-gray-800 group animate-flash duration-1000"
+      class="flex p-3 items-center gap-3 relative rounded-md cursor-pointer break-all pr-14 bg-gray-400 hover:bg-gray-400 dark:bg-gray-800 dark:hover:bg-gray-800 group animate-flash duration-1000"
       ><svg
         stroke="currentColor"
         fill="none"
@@ -45,8 +45,10 @@
       >
         Modificar colores en Tailwind.
       </div>
-      <div class="absolute flex right-1 z-10 text-gray-300 visible">
-        <button class="p-1 hover:text-white">
+      <div
+        class="absolute flex right-1 z-10 text-gray-600 dark:text-gray-300 visible"
+      >
+        <button class="p-1 hover:text-gray-800 dark:hover:text-white">
           <svg
             stroke="currentColor"
             fill="none"
@@ -64,7 +66,7 @@
               d="M16.5 3.5a2.121 2.121 0 0 1 3 3L7 19l-4 1 1-4L16.5 3.5z"
             ></path>
           </svg></button
-        ><button class="p-1 hover:text-white">
+        ><button class="p-1 hover:text-gray-800 dark:hover:text-white">
           <svg
             stroke="currentColor"
             fill="none"
@@ -87,7 +89,7 @@
         </button></div
     ></a>
     <a
-      class="flex p-3 items-center gap-3 relative rounded-md hover:bg-cs-dark-700 cursor-pointer break-all group"
+      class="flex p-3 items-center gap-3 relative rounded-md hover:bg-cs-light dark:hover:bg-cs-dark-700 cursor-pointer break-all group"
       ><svg
         stroke="currentColor"
         fill="none"
@@ -109,7 +111,7 @@
       >
         Descargar icono del sitio
         <div
-          class="absolute inset-y-0 right-0 w-8 z-10 bg-gradient-to-l from-cs-dark group-hover:from-cs-dark-700"
+          class="absolute inset-y-0 right-0 w-8 z-10 bg-gradient-to-l from-cs-light-800 group-hover:from-cs-light dark:from-cs-dark dark:group-hover:from-cs-dark-700"
         ></div>
       </div>
     </a>
