Add code for textarea

--- a/src/app/features/chat/pages/chat/chat.component.html
+++ b/src/app/features/chat/pages/chat/chat.component.html
@@ -1,8 +1,8 @@
 <main
-  class="flex h-full flex-col sm:flex-row dark:bg-cs-dark-800 dark:text-gray-100"
+  class="flex h-full flex-col sm:flex-row dark:bg-cs-dark-800 dark:text-gray-100 relative"
 >
   <aside
-    class="bg-cs-light-800 dark:bg-cs-dark text-base sm:text-sm flex h-full w-full sm:w-224 flex-col space-y-1 p-2"
+    class="bg-cs-light-800 dark:bg-cs-dark text-base sm:text-sm flex h-full w-full sm:w-224 flex-col space-y-1 p-2 absolute sm:static"
   >
     <a
       class="flex p-3 items-center gap-3 rounded-md hover:bg-gray-500/10 transition-colors duration-200 dark:text-gray-100 cursor-pointer text-sm mb-2 flex-shrink-0 border border-gray-900 dark:border-white/20"
@@ -23,7 +23,7 @@
       >New chat</a
     >
     <a
-      class="flex p-3 items-center gap-3 relative rounded-md cursor-pointer break-all pr-14 bg-gray-400 hover:bg-gray-400 dark:bg-gray-800 dark:hover:bg-gray-800 group animate-flash duration-1000"
+      class="flex p-3 items-center gap-3 relative rounded-md cursor-pointer break-all pr-14 bg-gray-400 hover:bg-gray-400 dark:bg-cs-dark-700 dark:hover:bg-cs-dark-700 group animate-flash duration-1000"
       ><svg
         stroke="currentColor"
         fill="none"
@@ -89,7 +89,7 @@
         </button></div
     ></a>
     <a
-      class="flex p-3 items-center gap-3 relative rounded-md hover:bg-cs-light dark:hover:bg-cs-dark-700 cursor-pointer break-all group"
+      class="flex p-3 items-center gap-3 relative rounded-md hover:bg-cs-light dark:hover:bg-cs-dark-800 cursor-pointer break-all group"
       ><svg
         stroke="currentColor"
         fill="none"
@@ -111,51 +111,146 @@
       >
         Descargar icono del sitio
         <div
-          class="absolute inset-y-0 right-0 w-8 z-10 bg-gradient-to-l from-cs-light-800 group-hover:from-cs-light dark:from-cs-dark dark:group-hover:from-cs-dark-700"
+          class="absolute inset-y-0 right-0 w-8 z-10 bg-gradient-to-l from-cs-light-800 group-hover:from-cs-light dark:from-cs-dark dark:group-hover:from-cs-dark-800"
         ></div>
       </div>
     </a>
   </aside>
   <section class="flex-1 flex flex-col max-h-screen relative">
-    <div class="h-full pb-72 w-full overflow-auto">
-      <div class="">CHAT INITI</div>
-      <div>CHAT INITI</div>
-      <div>CHAT INITI</div>
-      <div>CHAT INITI</div>
-      <div>CHAT INITI</div>
-      <div>CHAT INITI</div>
-      <div>CHAT INITI</div>
-      <div>CHAT INITI</div>
-      <div>CHAT INITI</div>
-      <div>CHAT INITI</div>
-      <div>CHAT INITI</div>
-      <div>CHAT INITI</div>
-      <div>CHAT INITI</div>
-      <div>CHAT INITI</div>
-      <div>CHAT INITI</div>
-      <div>CHAT INITI</div>
-      <div>CHAT INITI</div>
-      <div>CHAT INITI</div>
-      <div>CHAT INITI</div>
-      <div>CHAT INITI</div>
-      <div>CHAT INITI</div>
-      <div>CHAT INITI</div>
-      <div>CHAT INITI</div>
-      <div>CHAT INITI</div>
-      <div>CHAT INITI</div>
-      <div>CHAT INITI</div>
-      <div>CHAT INITI</div>
-      <div>CHAT INITI</div>
-      <div>CHAT INITI</div>
-      <div>CHAT INITI</div>
-      <div>CHAT INITI</div>
-      <div>CHAT INITI</div>
-      <div>CHAT INITI</div>
-      <div>CHAT INITI</div>
-      <div>CHAT INITI</div>
-      <div>CHAT INITI</div>
-      <div>CHAT INITI</div>
+    <div class="h-full w-full overflow-auto pt-12 sm:pt-0">
+      <div class="card">HOLA</div>
+      <div class="card">HOLA</div>
+      <div class="card">HOLA</div>
+      <div class="card">HOLA</div>
+      <div class="card">HOLA</div>
+      <div class="card">HOLA</div>
+      <div class="card">HOLA</div>
+      <div class="card">HOLA</div>
+      <div class="card">HOLA</div>
+      <div class="card">HOLA</div>
+      <div class="card">HOLA</div>
+      <div class="card">HOLA</div>
+      <div class="card">HOLA</div>
+      <div class="card">HOLA</div>
+      <div class="card">HOLA</div>
+      <div class="card">HOLA</div>
+      <div class="card">HOLA</div>
+      <div class="card">HOLA</div>
+      <div class="card">HOLA</div>
+      <div class="card">HOLA</div>
+      <div class="card">HOLA</div>
+      <div class="card">HOLA</div>
+      <div class="card">HOLA</div>
+      <div class="card">HOLA</div>
+      <div class="card">HOLA</div>
+      <div class="card">HOLA</div>
+      <div class="card">HOLA</div>
+      <div class="card">HOLA</div>
+      <div class="card">HOLA</div>
+      <div class="card">HOLA</div>
+      <div class="card">HOLA</div>
+      <div class="card">HOLA</div>
+      <div class="card">HOLA</div>
+      <div class="card">HOLA</div>
+      <div class="w-full h-32 sm:h-48 flex-shrink-0"></div>
     </div>
-    <div class="h-48 absolute left-0 bottom-0">Footer</div>
+    <div
+      class="absolute bottom-0 left-0 w-full border-t md:border-t-0 dark:border-white/20 md:border-transparent md:dark:border-transparent md:bg-vert-light-gradient bg-white dark:bg-gray-800 md:!bg-transparent dark:md:bg-vert-dark-gradient pt-2"
+    >
+      <form
+        class="stretch mx-2 flex flex-row gap-3 last:mb-2 md:mx-4 md:last:mb-6 lg:mx-auto lg:max-w-3xl"
+      >
+        <div class="relative flex h-full flex-1 md:flex-col">
+          <div
+            class="flex ml-1 md:w-full md:m-auto md:mb-2 gap-0 md:gap-2 justify-center"
+          >
+            <button
+              class="btn px-[12] py-[8] relative btn-neutral border-0 md:border"
+            >
+              <div class="flex w-full items-center justify-center gap-2">
+                <svg
+                  stroke="currentColor"
+                  fill="none"
+                  stroke-width="1.5"
+                  viewBox="0 0 24 24"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  class="h-3 w-3"
+                  height="1em"
+                  width="1em"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <polyline points="1 4 1 10 7 10"></polyline>
+                  <polyline points="23 20 23 14 17 14"></polyline>
+                  <path
+                    d="M20.49 9A9 9 0 0 0 5.64 5.64L1 10m22 4l-4.64 4.36A9 9 0 0 1 3.51 15"
+                  ></path></svg
+                >Regenerate response
+              </div>
+            </button>
+          </div>
+          <div
+            class="flex flex-col w-full py-2 flex-grow md:py-3 md:pl-4 relative border border-black/10 bg-white dark:border-gray-900/50 dark:text-white dark:bg-cs-dark-500 rounded-md shadow-[0_0_10px_rgba(0,0,0,0.10)] dark:shadow-[0_0_15px_rgba(0,0,0,0.10)]"
+          >
+            <textarea
+              tabindex="0"
+              rows="1"
+              class="m-0 w-full resize-none outline-none border-0 bg-transparent p-0 pr-7"
+              style="max-height: 200px; height: 24px; overflow-y: hidden"
+              oninput="this.style.height = Math.min(this.scrollHeight, 200)+'px'"
+              onkeydown="handleKeyDown(event, this)"
+            ></textarea>
+            <button
+              class="absolute p-1 rounded-md text-gray-500 bottom-1.5 md:bottom-2.5 hover:bg-gray-100 dark:hover:text-gray-400 dark:hover:bg-gray-900 disabled:hover:bg-transparent dark:disabled:hover:bg-transparent right-1 md:right-2"
+            >
+              <svg
+                stroke="currentColor"
+                fill="none"
+                stroke-width="2"
+                viewBox="0 0 24 24"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                class="h-4 w-4 mr-1"
+                height="1em"
+                width="1em"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <line x1="22" y1="2" x2="11" y2="13"></line>
+                <polygon points="22 2 15 22 11 13 2 9 22 2"></polygon>
+              </svg>
+            </button>
+          </div>
+        </div>
+      </form>
+      <div
+        class="px-3 pt-2 pb-3 text-center text-xs text-black/50 dark:text-white/50 md:px-4 md:pt-3 md:pb-6"
+      >
+        <a
+          href="https://help.openai.com/en/articles/6825453-chatgpt-release-notes"
+          target="_blank"
+          rel="noreferrer"
+          class="underline"
+          >ChatGPT Mar 14 Version</a
+        >. Free Research Preview. Our goal is to make AI systems more natural
+        and safe to interact with. Your feedback will help us improve.
+      </div>
+    </div>
+    <!-- <div
+      class="w-full h-32 sm:h-48 absolute left-0 bottom-0 flex items-end justify-center"
+    >
+      <div
+        class="px-3 pt-2 pb-3 text-center text-xs text-black/50 dark:text-white/50 md:px-4 md:pt-3 md:pb-6"
+      >
+
+        <a
+          href="https://help.openai.com/en/articles/6825453-chatgpt-release-notes"
+          target="_blank"
+          rel="noreferrer"
+          class="underline"
+          >DevJaGz GPT Mar 14 Version</a
+        >. Free Research Preview. Our goal is to make AI systems more natural
+        and safe to interact with. Your feedback will help us improve.
+      </div>
+    </div> -->
   </section>
 </main>
