--- a/src/app/features/chat/pages/chat/chat.component.html
+++ b/src/app/features/chat/pages/chat/chat.component.html
@@ -189,37 +189,7 @@
               </div>
             </button>
           </div>
-          <div
-            class="flex flex-col w-full py-2 flex-grow md:py-3 md:pl-4 relative border border-black/10 bg-white dark:border-gray-900/50 dark:text-white dark:bg-cs-dark-500 rounded-md shadow-[0_0_10px_rgba(0,0,0,0.10)] dark:shadow-[0_0_15px_rgba(0,0,0,0.10)]"
-          >
-            <textarea
-              tabindex="0"
-              rows="1"
-              class="m-0 w-full resize-none outline-none border-0 bg-transparent p-0 pr-7"
-              style="max-height: 200px; height: 24px; overflow-y: hidden"
-              oninput="this.style.height = Math.min(this.scrollHeight, 200)+'px'"
-              onkeydown="handleKeyDown(event, this)"
-            ></textarea>
-            <button
-              class="absolute p-1 rounded-md text-gray-500 bottom-1.5 md:bottom-2.5 hover:bg-gray-100 dark:hover:text-gray-400 dark:hover:bg-gray-900 disabled:hover:bg-transparent dark:disabled:hover:bg-transparent right-1 md:right-2"
-            >
-              <svg
-                stroke="currentColor"
-                fill="none"
-                stroke-width="2"
-                viewBox="0 0 24 24"
-                stroke-linecap="round"
-                stroke-linejoin="round"
-                class="h-4 w-4 mr-1"
-                height="1em"
-                width="1em"
-                xmlns="http://www.w3.org/2000/svg"
-              >
-                <line x1="22" y1="2" x2="11" y2="13"></line>
-                <polygon points="22 2 15 22 11 13 2 9 22 2"></polygon>
-              </svg>
-            </button>
-          </div>
+          <app-chat-input></app-chat-input>
         </div>
       </form>
       <div
