Add logic to send the value of the textarea

--- a/src/app/features/chat/components/chat-input/chat-input.component.html
+++ b/src/app/features/chat/components/chat-input/chat-input.component.html
@@ -1,6 +1,6 @@
-<div
-  #wrapper
+<form
   class="flex flex-col w-full py-2 flex-grow md:py-3 md:pl-4 relative border border-black/10 bg-white dark:border-gray-900/50 dark:text-white dark:bg-cs-dark-500 rounded-md shadow-[0_0_10px_rgba(0,0,0,0.10)] dark:shadow-[0_0_15px_rgba(0,0,0,0.10)]"
+  (ngSubmit)="onSendClicked(textarea)"
 >
   <textarea
     #textarea
@@ -8,9 +8,11 @@
     rows="1"
     [style.max-height]="maxHeight + 'px'"
     class="m-0 w-full resize-none outline-none border-0 bg-transparent p-0 pr-7 overflow-auto"
-    (input)="onTextareaInput(textarea)"
+    (keydown)="onKeydown($event)"
+    (input)="onInputTextarea(textarea)"
   ></textarea>
   <button
+    type="submit"
     class="absolute p-1 rounded-md text-gray-500 bottom-1.5 md:bottom-2.5 hover:bg-gray-100 dark:hover:text-gray-400 dark:hover:bg-gray-900 disabled:hover:bg-transparent dark:disabled:hover:bg-transparent right-1 md:right-2"
   >
     <svg
@@ -29,4 +31,4 @@
       <polygon points="22 2 15 22 11 13 2 9 22 2"></polygon>
     </svg>
   </button>
-</div>
+</form>
