--- a/src/app/features/chat/pages/chat/chat.component.html
+++ b/src/app/features/chat/pages/chat/chat.component.html
@@ -200,27 +200,10 @@
           target="_blank"
           rel="noreferrer"
           class="underline"
-          >ChatGPT Mar 14 Version</a
+          >DevJaGzGPT Clone Version</a
         >. Free Research Preview. Our goal is to make AI systems more natural
         and safe to interact with. Your feedback will help us improve.
       </div>
     </div>
-    <!-- <div
-      class="w-full h-32 sm:h-48 absolute left-0 bottom-0 flex items-end justify-center"
-    >
-      <div
-        class="px-3 pt-2 pb-3 text-center text-xs text-black/50 dark:text-white/50 md:px-4 md:pt-3 md:pb-6"
-      >
-
-        <a
-          href="https://help.openai.com/en/articles/6825453-chatgpt-release-notes"
-          target="_blank"
-          rel="noreferrer"
-          class="underline"
-          >DevJaGz GPT Mar 14 Version</a
-        >. Free Research Preview. Our goal is to make AI systems more natural
-        and safe to interact with. Your feedback will help us improve.
-      </div>
-    </div> -->
   </section>
 </main>
