--- a/src/app/features/chat/pages/chat/chat.component.html
+++ b/src/app/features/chat/pages/chat/chat.component.html
@@ -157,41 +157,13 @@
     <div
       class="absolute bottom-0 left-0 w-full border-t md:border-t-0 dark:border-white/20 md:border-transparent md:dark:border-transparent md:bg-vert-light-gradient bg-white dark:bg-gray-800 md:!bg-transparent dark:md:bg-vert-dark-gradient pt-2"
     >
-      <form
-        class="stretch mx-2 flex flex-row gap-3 last:mb-2 md:mx-4 md:last:mb-6 lg:mx-auto lg:max-w-3xl"
+      <div
+        class="stretch relative mx-2 flex flex-row gap-3 last:mb-2 md:mx-4 md:last:mb-6 lg:mx-auto lg:max-w-3xl"
       >
-        <div class="relative flex h-full flex-1 md:flex-col">
-          <div
-            class="flex ml-1 md:w-full md:m-auto md:mb-2 gap-0 md:gap-2 justify-center"
-          >
-            <button
-              class="btn px-[12] py-[8] relative btn-neutral border-0 md:border"
-            >
-              <div class="flex w-full items-center justify-center gap-2">
-                <svg
-                  stroke="currentColor"
-                  fill="none"
-                  stroke-width="1.5"
-                  viewBox="0 0 24 24"
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                  class="h-3 w-3"
-                  height="1em"
-                  width="1em"
-                  xmlns="http://www.w3.org/2000/svg"
-                >
-                  <polyline points="1 4 1 10 7 10"></polyline>
-                  <polyline points="23 20 23 14 17 14"></polyline>
-                  <path
-                    d="M20.49 9A9 9 0 0 0 5.64 5.64L1 10m22 4l-4.64 4.36A9 9 0 0 1 3.51 15"
-                  ></path></svg
-                >Regenerate response
-              </div>
-            </button>
-          </div>
+        <div class="h-full flex-1 md:flex-col">
           <app-chat-input></app-chat-input>
         </div>
-      </form>
+      </div>
       <div
         class="px-3 pt-2 pb-3 text-center text-xs text-black/50 dark:text-white/50 md:px-4 md:pt-3 md:pb-6"
       >
