Fix gradient effect at the bottom

--- a/src/app/features/chat/pages/chat/chat.component.html
+++ b/src/app/features/chat/pages/chat/chat.component.html
@@ -155,7 +155,7 @@
       <div class="w-full h-32 sm:h-48 flex-shrink-0"></div>
     </div>
     <div
-      class="absolute bottom-0 left-0 w-full border-t md:border-t-0 dark:border-white/20 md:border-transparent md:dark:border-transparent md:bg-vert-light-gradient bg-white dark:bg-gray-800 md:!bg-transparent dark:md:bg-vert-dark-gradient pt-2"
+      class="relative sm:absolute bottom-0 left-0 w-full border-t md:border-t-0 dark:border-white/20 md:border-transparent md:dark:border-transparent md:bg-vert-light-gradient bg-white dark:bg-gray-800 md:!bg-transparent dark:md:bg-vert-dark-gradient pt-2"
     >
       <div
         class="stretch relative mx-2 flex flex-row gap-3 last:mb-2 md:mx-4 md:last:mb-6 lg:mx-auto lg:max-w-3xl"
