Fix responsivitiy of sidebar

--- a/src/app/features/chat/components/chat-input/chat-input.component.html
+++ b/src/app/features/chat/components/chat-input/chat-input.component.html
@@ -1,7 +1,7 @@
 <div
   class="flex ml-1 md:w-full md:m-auto md:mb-2 gap-0 md:gap-2 justify-center"
 >
-  <button class="btn px-[12] py-[8] relative btn-neutral border-0 md:border">
+  <button class="btn relative btn-neutral border-0 md:border">
     <div class="flex w-full items-center justify-center gap-2">
       <svg
         stroke="currentColor"
