--- a/src/app/features/chat/pages/chat/chat.component.html
+++ b/src/app/features/chat/pages/chat/chat.component.html
@@ -2,7 +2,7 @@
   class="flex h-full flex-col sm:flex-row dark:bg-cs-dark-700 dark:text-gray-100 relative"
 >
   <aside
-    class="bg-cs-light-800 dark:bg-cs-dark text-base sm:text-sm flex h-full w-full sm:w-224 flex-col space-y-1 p-2 absolute sm:static"
+    class="hidden md:flex md:inset-y-0 md:w-[260px] md:flex-col bg-cs-light-800 dark:bg-cs-dark text-base sm:text-sm flex-1 h-full w-full sm:max-w-[300px] flex-col space-y-1 p-2 absolute sm:static"
   >
     <a
       class="flex p-3 items-center gap-3 rounded-md hover:bg-gray-500/10 transition-colors duration-200 dark:text-gray-100 cursor-pointer text-sm mb-2 flex-shrink-0 border border-gray-900 dark:border-white/20"
@@ -151,8 +151,8 @@
       <div class="card">HOLA</div>
       <div class="card">HOLA</div>
       <div class="card">HOLA</div>
-      <div class="card">HOLA</div>
-      <div class="w-full h-32 sm:h-48 flex-shrink-0"></div>
+      <div class="card dark:bg-cs-dark-400 h-40">HOLA</div>
+      <div class="w-full h-32 sm:h-48 flex-shrink-0 dark:bg-cs-dark-700"></div>
     </div>
     <div
       class="relative sm:absolute bottom-0 left-0 w-full border-t md:border-t-0 dark:border-white/20 md:border-transparent md:dark:border-transparent md:bg-vert-light-gradient bg-white dark:bg-gray-800 md:!bg-transparent dark:md:bg-vert-dark-gradient pt-2"
