--- a/src/app/features/chat/components/chat-input/chat-input.component.html
+++ b/src/app/features/chat/components/chat-input/chat-input.component.html
@@ -33,13 +33,13 @@
     tabindex="0"
     rows="1"
     [style.max-height]="maxHeight + 'px'"
-    class="m-0 w-full resize-none outline-none border-0 bg-transparent p-0 pr-7 overflow-auto"
+    class="m-0 w-full resize-none outline-none border-0 bg-transparent p-0 pr-14 md:pr-7 overflow-auto"
     (keydown)="onKeydown($event)"
     (input)="onInputTextarea(textarea)"
   ></textarea>
   <button
     type="submit"
-    class="absolute p-1 rounded-md text-gray-500 bottom-1.5 md:bottom-2.5 hover:bg-gray-100 dark:hover:text-gray-400 dark:hover:bg-gray-900 disabled:hover:bg-transparent dark:disabled:hover:bg-transparent right-1 md:right-2"
+    class="absolute p-1 rounded-md text-gray-500 bottom-1.5 md:bottom-2.5 hover:bg-gray-100 dark:hover:text-gray-400 dark:hover:bg-gray-900 disabled:hover:bg-transparent dark:disabled:hover:bg-transparent right-7 md:right-2"
   >
     <svg
       stroke="currentColor"
@@ -55,6 +55,28 @@
     >
       <line x1="22" y1="2" x2="11" y2="13"></line>
       <polygon points="22 2 15 22 11 13 2 9 22 2"></polygon>
+    </svg>
+  </button>
+  <button
+    type="submit"
+    class="absolute p-1 rounded-md text-gray-500 bottom-1.5 md:bottom-2.5 hover:bg-gray-100 dark:hover:text-gray-400 dark:hover:bg-gray-900 disabled:hover:bg-transparent dark:disabled:hover:bg-transparent right-1 block md:hidden"
+  >
+    <svg
+      xmlns="http://www.w3.org/2000/svg"
+      class="icon icon-tabler icon-tabler-refresh"
+      height="1em"
+      width="1em"
+      class="h-4 w-4"
+      viewBox="0 0 24 24"
+      stroke-width="2"
+      stroke="currentColor"
+      fill="none"
+      stroke-linecap="round"
+      stroke-linejoin="round"
+    >
+      <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+      <path d="M20 11a8.1 8.1 0 0 0 -15.5 -2m-.5 -4v4h4"></path>
+      <path d="M4 13a8.1 8.1 0 0 0 15.5 2m.5 4v-4h-4"></path>
     </svg>
   </button>
 </form>
