--- a/src/app/features/chat/components/chat-input/chat-input.component.html
+++ b/src/app/features/chat/components/chat-input/chat-input.component.html
@@ -24,59 +24,65 @@
     </div>
   </button>
 </div>
-<form
-  class="flex flex-col w-full py-2 flex-grow md:py-3 pl-2 md:pl-4 relative border border-black/10 bg-white dark:border-gray-900/50 dark:text-white dark:bg-cs-dark-500 rounded-md shadow-[0_0_10px_rgba(0,0,0,0.10)] dark:shadow-[0_0_15px_rgba(0,0,0,0.10)]"
-  (ngSubmit)="onSendClicked(textarea)"
->
-  <textarea
-    #textarea
-    tabindex="0"
-    rows="1"
-    [style.max-height]="maxHeight + 'px'"
-    class="m-0 w-full resize-none outline-none border-0 bg-transparent p-0 pr-14 md:pr-7 overflow-auto"
-    (keydown)="onKeydown($event)"
-    (input)="onInputTextarea(textarea)"
-  ></textarea>
-  <button
-    type="submit"
-    class="absolute p-1 rounded-md text-gray-500 bottom-1.5 md:bottom-2.5 hover:bg-gray-100 dark:hover:text-gray-400 dark:hover:bg-gray-900 disabled:hover:bg-transparent dark:disabled:hover:bg-transparent right-7 md:right-2"
+<div class="flex">
+  <form
+    class="flex flex-col w-full py-2 flex-grow md:py-3 pl-2 md:pl-4 relative border border-black/10 bg-white dark:border-gray-900/50 dark:text-white dark:bg-cs-dark-500 rounded-md shadow-[0_0_10px_rgba(0,0,0,0.10)] dark:shadow-[0_0_15px_rgba(0,0,0,0.10)]"
+    (ngSubmit)="onSendClicked(textarea)"
   >
-    <svg
-      stroke="currentColor"
-      fill="none"
-      stroke-width="2"
-      viewBox="0 0 24 24"
-      stroke-linecap="round"
-      stroke-linejoin="round"
-      class="h-4 w-4 mr-1"
-      height="1em"
-      width="1em"
-      xmlns="http://www.w3.org/2000/svg"
+    <textarea
+      #textarea
+      tabindex="0"
+      rows="1"
+      [style.max-height]="maxHeight + 'px'"
+      class="m-0 w-full resize-none outline-none border-0 bg-transparent p-0 pr-7 overflow-auto"
+      (keydown)="onKeydown($event)"
+      (input)="onInputTextarea(textarea)"
+    ></textarea>
+    <button
+      type="submit"
+      class="absolute p-1 rounded-md text-gray-500 bottom-1.5 md:bottom-2.5 hover:bg-gray-100 dark:hover:text-gray-400 dark:hover:bg-gray-900 disabled:hover:bg-transparent dark:disabled:hover:bg-transparent right-1 md:right-2"
     >
-      <line x1="22" y1="2" x2="11" y2="13"></line>
-      <polygon points="22 2 15 22 11 13 2 9 22 2"></polygon>
-    </svg>
-  </button>
-  <button
-    type="submit"
-    class="absolute p-1 rounded-md text-gray-500 bottom-1.5 md:bottom-2.5 hover:bg-gray-100 dark:hover:text-gray-400 dark:hover:bg-gray-900 disabled:hover:bg-transparent dark:disabled:hover:bg-transparent right-1 block md:hidden"
+      <svg
+        stroke="currentColor"
+        fill="none"
+        stroke-width="2"
+        viewBox="0 0 24 24"
+        stroke-linecap="round"
+        stroke-linejoin="round"
+        class="h-4 w-4 mr-1"
+        height="1em"
+        width="1em"
+        xmlns="http://www.w3.org/2000/svg"
+      >
+        <line x1="22" y1="2" x2="11" y2="13"></line>
+        <polygon points="22 2 15 22 11 13 2 9 22 2"></polygon>
+      </svg>
+    </button>
+  </form>
+  <div
+    class="flex md:hidden ml-1 md:w-full md:m-auto md:mb-2 gap-0 md:gap-2 justify-center"
   >
-    <svg
-      xmlns="http://www.w3.org/2000/svg"
-      class="icon icon-tabler icon-tabler-refresh"
-      height="1em"
-      width="1em"
-      class="h-4 w-4"
-      viewBox="0 0 24 24"
-      stroke-width="2"
-      stroke="currentColor"
-      fill="none"
-      stroke-linecap="round"
-      stroke-linejoin="round"
-    >
-      <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
-      <path d="M20 11a8.1 8.1 0 0 0 -15.5 -2m-.5 -4v4h4"></path>
-      <path d="M4 13a8.1 8.1 0 0 0 15.5 2m.5 4v-4h-4"></path>
-    </svg>
-  </button>
-</form>
+    <button class="btn relative btn-neutral border-0 md:border">
+      <div class="flex w-full items-center justify-center gap-2">
+        <svg
+          stroke="currentColor"
+          fill="none"
+          stroke-width="2"
+          viewBox="0 0 24 24"
+          stroke-linecap="round"
+          stroke-linejoin="round"
+          class="h-4 w-4"
+          height="1em"
+          width="1em"
+          xmlns="http://www.w3.org/2000/svg"
+        >
+          <polyline points="1 4 1 10 7 10"></polyline>
+          <polyline points="23 20 23 14 17 14"></polyline>
+          <path
+            d="M20.49 9A9 9 0 0 0 5.64 5.64L1 10m22 4l-4.64 4.36A9 9 0 0 1 3.51 15"
+          ></path>
+        </svg>
+      </div>
+    </button>
+  </div>
+</div>
