--- a/src/app/features/chat/components/chat-sidebar/components/chat-sidebar-item/chat-sidebar-item.component.html
+++ b/src/app/features/chat/components/chat-sidebar/components/chat-sidebar-item/chat-sidebar-item.component.html
@@ -1,1 +1,109 @@
-<p>chat-sidebar-item works!</p>
+<ng-container [ngSwitch]="currentMode">
+  <ng-container
+    *ngSwitchCase="modes.DEFAULT"
+    [ngTemplateOutlet]="DefaultModeTemplate"
+  ></ng-container>
+  <ng-container
+    *ngSwitchCase="modes.SELECTED"
+    [ngTemplateOutlet]="SelectedModeTemplate"
+  ></ng-container>
+</ng-container>
+
+<ng-template #DefaultModeTemplate>
+  <a
+    class="flex p-3 items-center gap-3 relative rounded-md hover:bg-cs-light dark:hover:bg-cs-dark-800 cursor-pointer break-all group"
+    ><svg
+      stroke="currentColor"
+      fill="none"
+      stroke-width="2"
+      viewBox="0 0 24 24"
+      stroke-linecap="round"
+      stroke-linejoin="round"
+      class="h-4 w-4"
+      height="1em"
+      width="1em"
+      xmlns="http://www.w3.org/2000/svg"
+    >
+      <path
+        d="M21 15a2 2 0 0 1-2 2H7l-4 4V5a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2z"
+      ></path>
+    </svg>
+    <div
+      class="flex-1 text-ellipsis max-h-5 overflow-hidden break-all relative"
+    >
+      Descargar icono del sitio
+      <div
+        class="absolute inset-y-0 right-0 w-8 z-10 bg-gradient-to-l from-cs-light-800 group-hover:from-cs-light dark:from-cs-dark dark:group-hover:from-cs-dark-800"
+      ></div>
+    </div>
+  </a>
+</ng-template>
+
+<ng-template #SelectedModeTemplate>
+  <a
+    class="flex p-3 items-center gap-3 relative rounded-md cursor-pointer break-all pr-14 bg-gray-400 hover:bg-gray-400 dark:bg-cs-dark-700 dark:hover:bg-cs-dark-700 group animate-flash duration-1000"
+    ><svg
+      stroke="currentColor"
+      fill="none"
+      stroke-width="2"
+      viewBox="0 0 24 24"
+      stroke-linecap="round"
+      stroke-linejoin="round"
+      class="h-4 w-4"
+      height="1em"
+      width="1em"
+      xmlns="http://www.w3.org/2000/svg"
+    >
+      <path
+        d="M21 15a2 2 0 0 1-2 2H7l-4 4V5a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2z"
+      ></path>
+    </svg>
+    <div
+      class="flex-1 text-ellipsis max-h-5 overflow-hidden break-all relative"
+    >
+      Modificar colores en Tailwind.
+    </div>
+    <div
+      class="absolute flex right-1 z-10 text-gray-600 dark:text-gray-300 visible"
+    >
+      <button class="p-1 hover:text-gray-800 dark:hover:text-white">
+        <svg
+          stroke="currentColor"
+          fill="none"
+          stroke-width="2"
+          viewBox="0 0 24 24"
+          stroke-linecap="round"
+          stroke-linejoin="round"
+          class="h-4 w-4"
+          height="1em"
+          width="1em"
+          xmlns="http://www.w3.org/2000/svg"
+        >
+          <path d="M12 20h9"></path>
+          <path
+            d="M16.5 3.5a2.121 2.121 0 0 1 3 3L7 19l-4 1 1-4L16.5 3.5z"
+          ></path>
+        </svg></button
+      ><button class="p-1 hover:text-gray-800 dark:hover:text-white">
+        <svg
+          stroke="currentColor"
+          fill="none"
+          stroke-width="2"
+          viewBox="0 0 24 24"
+          stroke-linecap="round"
+          stroke-linejoin="round"
+          class="h-4 w-4"
+          height="1em"
+          width="1em"
+          xmlns="http://www.w3.org/2000/svg"
+        >
+          <polyline points="3 6 5 6 21 6"></polyline>
+          <path
+            d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6m3 0V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"
+          ></path>
+          <line x1="10" y1="11" x2="10" y2="17"></line>
+          <line x1="14" y1="11" x2="14" y2="17"></line>
+        </svg>
+      </button></div
+  ></a>
+</ng-template>
