Add new sidebar buttons

--- a/src/app/features/chat/components/chat-sidebar/chat-sidebar.component.html
+++ b/src/app/features/chat/components/chat-sidebar/chat-sidebar.component.html
@@ -19,5 +19,74 @@
       <line x1="5" y1="12" x2="19" y2="12"></line></svg
     >New chat</a
   >
-  <app-chat-sidebar-item></app-chat-sidebar-item>
+  <!-- <div class="overflow-y-auto h-96">
+
+  </div> -->
+
+  <div class="flex-col flex-1 overflow-y-auto border-b border-white/20">
+    <app-chat-sidebar-item></app-chat-sidebar-item>
+    <div class="flex flex-col gap-2 text-gray-100 text-sm"></div>
+  </div>
+  <a
+    class="flex py-3 px-3 items-center gap-3 rounded-md hover:bg-gray-500/10 transition-colors duration-200 text-white cursor-pointer text-sm"
+    ><span class="flex w-full flex-row justify-between"
+      ><span class="gold-new-button flex items-center gap-3"
+        ><svg
+          stroke="currentColor"
+          fill="none"
+          stroke-width="2"
+          viewBox="0 0 24 24"
+          stroke-linecap="round"
+          stroke-linejoin="round"
+          class="h-4 w-4"
+          height="1em"
+          width="1em"
+          xmlns="http://www.w3.org/2000/svg"
+        >
+          <path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2"></path>
+          <circle cx="12" cy="7" r="4"></circle></svg
+        >Upgrade to Plus</span
+      ></span
+    ></a
+  >
+  <a
+    href="https://help.openai.com/en/collections/3742473-chatgpt"
+    target="_blank"
+    class="flex py-3 px-3 items-center gap-3 rounded-md hover:bg-gray-500/10 transition-colors duration-200 text-white cursor-pointer text-sm"
+    ><svg
+      stroke="currentColor"
+      fill="none"
+      stroke-width="2"
+      viewBox="0 0 24 24"
+      stroke-linecap="round"
+      stroke-linejoin="round"
+      class="h-4 w-4"
+      height="1em"
+      width="1em"
+      xmlns="http://www.w3.org/2000/svg"
+    >
+      <path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"></path>
+      <polyline points="15 3 21 3 21 9"></polyline>
+      <line x1="10" y1="14" x2="21" y2="3"></line></svg
+    >Updates &amp; FAQ</a
+  >
+  <a
+    class="flex py-3 px-3 items-center gap-3 rounded-md hover:bg-gray-500/10 transition-colors duration-200 text-white cursor-pointer text-sm"
+    ><svg
+      stroke="currentColor"
+      fill="none"
+      stroke-width="2"
+      viewBox="0 0 24 24"
+      stroke-linecap="round"
+      stroke-linejoin="round"
+      class="h-4 w-4"
+      height="1em"
+      width="1em"
+      xmlns="http://www.w3.org/2000/svg"
+    >
+      <path d="M9 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h4"></path>
+      <polyline points="16 17 21 12 16 7"></polyline>
+      <line x1="21" y1="12" x2="9" y2="12"></line></svg
+    >Log out</a
+  >
 </aside>
