--- a/src/app/features/chat/components/chat-sidebar/components/chat-sidebar-item/chat-sidebar-item.component.html
+++ b/src/app/features/chat/components/chat-sidebar/components/chat-sidebar-item/chat-sidebar-item.component.html
@@ -1,12 +1,24 @@
-<ng-container [ngSwitch]="currentMode">
-  <ng-container
-    *ngSwitchCase="modes.DEFAULT"
-    [ngTemplateOutlet]="DefaultModeTemplate"
-  ></ng-container>
-  <ng-container
-    *ngSwitchCase="modes.SELECTED"
-    [ngTemplateOutlet]="SelectedModeTemplate"
-  ></ng-container>
+<ng-container *ngIf="item">
+  <a
+    [routerLink]="item.routerLink"
+    routerLinkActive="active"
+    class="flex p-3 items-center gap-3 relative rounded-md hover:bg-cs-light dark:hover:bg-cs-dark-800 cursor-pointer break-all group"
+    [ngClass]="{
+      'dark:border-white/20': item.outlined,
+      'border-gray-900': item.outlined
+    }"
+  >
+    ICON
+
+    <div
+      class="flex-1 text-ellipsis max-h-5 overflow-hidden break-all relative"
+    >
+      {{ item.label }}
+      <div
+        class="absolute inset-y-0 right-0 w-8 z-10 bg-gradient-to-l from-cs-light-800 group-hover:from-cs-light dark:from-cs-dark dark:group-hover:from-cs-dark-800"
+      ></div>
+    </div>
+  </a>
 </ng-container>
 
 <ng-template #DefaultModeTemplate>
