--- a/src/app/features/chat/components/chat-sidebar/components/chat-sidebar-item/chat-sidebar-item.component.html
+++ b/src/app/features/chat/components/chat-sidebar/components/chat-sidebar-item/chat-sidebar-item.component.html
@@ -8,8 +8,7 @@
       'border-gray-900': item.outlined
     }"
   >
-    ICON
-
+    <div [innerHTML]="(svgIcon | async) || '' | safeHTML"></div>
     <div
       class="flex-1 text-ellipsis max-h-5 overflow-hidden break-all relative"
     >
