--- a/src/app/features/chat/components/chat-sidebar/components/chat-sidebar-item/chat-sidebar-item.component.html
+++ b/src/app/features/chat/components/chat-sidebar/components/chat-sidebar-item/chat-sidebar-item.component.html
@@ -17,6 +17,11 @@
         class="absolute inset-y-0 right-0 w-8 z-10 bg-gradient-to-l from-cs-light-800 group-hover:from-cs-light dark:from-cs-dark dark:group-hover:from-cs-dark-800"
       ></div>
     </div>
+    <div
+      class="absolute flex right-1 z-10 text-gray-600 dark:text-gray-300 visible"
+    >
+      <ng-container [ngTemplateOutlet]="selectedButtonsTemplate"></ng-container>
+    </div>
   </a>
 </ng-container>
 
@@ -117,4 +122,44 @@
         </svg>
       </button></div
   ></a>
+</ng-template>
+
+<ng-template #selectedButtonsTemplate>
+  <button class="p-1 hover:text-gray-800 dark:hover:text-white">
+    <svg
+      stroke="currentColor"
+      fill="none"
+      stroke-width="2"
+      viewBox="0 0 24 24"
+      stroke-linecap="round"
+      stroke-linejoin="round"
+      class="h-4 w-4"
+      height="1em"
+      width="1em"
+      xmlns="http://www.w3.org/2000/svg"
+    >
+      <path d="M12 20h9"></path>
+      <path d="M16.5 3.5a2.121 2.121 0 0 1 3 3L7 19l-4 1 1-4L16.5 3.5z"></path>
+    </svg></button
+  ><button class="p-1 hover:text-gray-800 dark:hover:text-white">
+    <svg
+      stroke="currentColor"
+      fill="none"
+      stroke-width="2"
+      viewBox="0 0 24 24"
+      stroke-linecap="round"
+      stroke-linejoin="round"
+      class="h-4 w-4"
+      height="1em"
+      width="1em"
+      xmlns="http://www.w3.org/2000/svg"
+    >
+      <polyline points="3 6 5 6 21 6"></polyline>
+      <path
+        d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6m3 0V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"
+      ></path>
+      <line x1="10" y1="11" x2="10" y2="17"></line>
+      <line x1="14" y1="11" x2="14" y2="17"></line>
+    </svg>
+  </button>
 </ng-template>
