--- a/src/app/features/chat/components/chat-sidebar/chat-sidebar.component.html
+++ b/src/app/features/chat/components/chat-sidebar/chat-sidebar.component.html
@@ -19,12 +19,12 @@
       <line x1="5" y1="12" x2="19" y2="12"></line></svg
     >New chat</a
   >
-  <!-- <div class="overflow-y-auto h-96">
-
-  </div> -->
 
   <div class="flex-col flex-1 overflow-y-auto border-b border-white/20">
-    <app-chat-sidebar-item></app-chat-sidebar-item>
+    <app-chat-sidebar-item
+      [item]="item"
+      *ngFor="let item of items; trackBy: trackByFn"
+    ></app-chat-sidebar-item>
     <div class="flex flex-col gap-2 text-gray-100 text-sm"></div>
   </div>
   <a
