--- a/src/app/features/chat/components/chat-sidebar/components/chat-sidebar-item/chat-sidebar-item.component.html
+++ b/src/app/features/chat/components/chat-sidebar/components/chat-sidebar-item/chat-sidebar-item.component.html
@@ -2,26 +2,45 @@
   <a
     [routerLink]="routerLink"
     routerLinkActive="chat-sidebar-item-active"
-    class="flex p-3 items-center gap-3 relative rounded-md hover:bg-cs-light dark:hover:bg-cs-dark-800 cursor-pointer break-all group"
+    class="flex p-3 items-center gap-3 relative rounded-md cursor-pointer break-all group"
     [ngClass]="{
       'dark:border-white/20': item.outlined,
-      'border-gray-900': item.outlined
+      'border-gray-900': item.outlined,
+      'hover:bg-cs-light': !isActive,
+      'hover:bg-cs-light-400': isActive,
+      'dark:hover:bg-cs-dark-800 ': !isActive,
+      'dark:hover:bg-cs-dark-700 ': isActive
     }"
   >
     <div [innerHTML]="(svgIcon | async) || '' | safeHTML"></div>
     <div
       class="flex-1 text-ellipsis max-h-5 overflow-hidden break-all relative"
+      [ngClass]="{
+        'pr-10': isActive
+      }"
     >
       {{ label }}
       <div
-        class="absolute inset-y-0 right-0 w-8 z-10 bg-gradient-to-l from-cs-light-800 group-hover:from-cs-light dark:from-cs-dark dark:group-hover:from-cs-dark-800"
+        class="absolute inset-y-0 right-0 w-8 z-10 bg-gradient-to-l"
+        [ngClass]="{
+          'right-0': !isActive,
+          'right-10': isActive,
+          'from-cs-light-800': !isActive,
+          'from-gray-400': isActive,
+          'dark:from-cs-dark': !isActive,
+          'dark:from-cs-dark-700': isActive,
+          'group-hover:from-cs-light': !isActive,
+          'group-hover:from-cs-light-400': isActive,
+          'dark:group-hover:from-cs-dark-800': !isActive,
+          'dark:group-hover:from-cs-dark-700': isActive
+        }"
       ></div>
     </div>
     <div
       class="absolute flex right-1 z-10 text-gray-600 dark:text-gray-300 visible"
     >
       <ng-container
-        *ngIf="isActive(routerLink)"
+        *ngIf="isActive"
         [ngTemplateOutlet]="selectedButtonsTemplate"
       ></ng-container>
     </div>
