Create chat landing

--- a/src/app/features/chats/pages/chat/chat.component.html
+++ b/src/app/features/chats/pages/chat/chat.component.html
@@ -4,41 +4,11 @@
   <app-chat-sidebar></app-chat-sidebar>
   <section class="flex-1 flex flex-col max-h-screen relative">
     <div class="h-full w-full overflow-auto pt-12 sm:pt-0">
-      <div class="card">HOLA</div>
-      <div class="card">HOLA</div>
-      <div class="card">HOLA</div>
-      <div class="card">HOLA</div>
-      <div class="card">HOLA</div>
-      <div class="card">HOLA</div>
-      <div class="card">HOLA</div>
-      <div class="card">HOLA</div>
-      <div class="card">HOLA</div>
-      <div class="card">HOLA</div>
-      <div class="card">HOLA</div>
-      <div class="card">HOLA</div>
-      <div class="card">HOLA</div>
-      <div class="card">HOLA</div>
-      <div class="card">HOLA</div>
-      <div class="card">HOLA</div>
-      <div class="card">HOLA</div>
-      <div class="card">HOLA</div>
-      <div class="card">HOLA</div>
-      <div class="card">HOLA</div>
-      <div class="card">HOLA</div>
-      <div class="card">HOLA</div>
-      <div class="card">HOLA</div>
-      <div class="card">HOLA</div>
-      <div class="card">HOLA</div>
-      <div class="card">HOLA</div>
-      <div class="card">HOLA</div>
-      <div class="card">HOLA</div>
-      <div class="card">HOLA</div>
-      <div class="card">HOLA</div>
-      <div class="card">HOLA</div>
-      <div class="card">HOLA</div>
-      <div class="card">HOLA</div>
-      <div class="card dark:bg-cs-dark-400 h-40">HOLA</div>
-      <div class="w-full h-32 sm:h-48 flex-shrink-0 dark:bg-cs-dark-700"></div>
+      <div class="w-full h-32 sm:h-48 flex-shrink-0 dark:bg-cs-dark-700">
+        <div class="grid place-items-center">
+          <app-chat-landing></app-chat-landing>
+        </div>
+      </div>
     </div>
     <div
       class="relative sm:absolute bottom-0 left-0 w-full border-t md:border-t-0 dark:border-white/20 md:border-transparent md:dark:border-transparent md:bg-vert-light-gradient bg-white dark:bg-cs-dark-300 md:!bg-transparent dark:md:bg-vert-dark-gradient pt-2"
