Add confirm clear conversation button in sidebar

--- a/src/app/features/chats/components/chat-sidebar/chat-sidebar.component.html
+++ b/src/app/features/chats/components/chat-sidebar/chat-sidebar.component.html
@@ -53,6 +53,23 @@
   >
   <a
     class="flex py-3 px-3 items-center gap-3 rounded-md hover:bg-gray-500/10 transition-colors duration-200 text-white cursor-pointer text-sm"
+    ><svg
+      stroke="currentColor"
+      fill="none"
+      stroke-width="2"
+      viewBox="0 0 24 24"
+      stroke-linecap="round"
+      stroke-linejoin="round"
+      class="h-4 w-4"
+      height="1em"
+      width="1em"
+      xmlns="http://www.w3.org/2000/svg"
+    >
+      <polyline points="20 6 9 17 4 12"></polyline></svg
+    >Confirm clear conversations</a
+  >
+  <a
+    class="flex py-3 px-3 items-center gap-3 rounded-md hover:bg-gray-500/10 transition-colors duration-200 text-white cursor-pointer text-sm"
     ><span class="flex w-full flex-row justify-between"
       ><span class="gold-new-button flex items-center gap-3"
         ><svg
