--- a/src/app/features/chats/pages/chats-list/chat-list.component.html
+++ b/src/app/features/chats/pages/chats-list/chat-list.component.html
@@ -1,7 +1,7 @@
 <main
   class="flex h-full flex-col sm:flex-row dark:bg-cs-dark-700 dark:text-gray-100 relative"
 >
-  <app-chat-sidebar></app-chat-sidebar>
+  <app-chat-sidebar [items]="(menuItems$ | async) || []"></app-chat-sidebar>
   <section class="flex-1 flex flex-col max-h-screen relative">
     <div class="h-full w-full overflow-auto pt-12 sm:pt-0">
       <div class="w-full h-32 sm:h-48 flex-shrink-0 dark:bg-cs-dark-700">
